testsuite/tests/semantic_errors/goto_missing_label/test.out
Analyzing test.adb
##################

Resolving xrefs for node <GotoStmt test.adb:3:4-3:17>
*****************************************************

test.adb:3:9: error: cannot find name 'Missing'
3 |    goto Missing;
  |         ^^^^^^^


Expected name resolution failure for node <GotoStmt test.adb:3:4-3:17>


Done.
